api refactor and bug fixes
