# handler/router.go
@@ -235,8 +235,8 @@ func (c *Configuration) api(e *echo.Echo, db *sql.DB, sl *slog.Logger, public em
 	apiGroup.GET("/areacodes", app.AreacodesAPI)
 	apiGroup.GET("/areacodes/:code", app.AreaCodeAPI)
 	apiGroup.GET("/areacodes/search/:query", app.AreacodeSearchAPI)
-	apiGroup.GET("/areacodes/territories", app.TerritoriesAPI)
-	apiGroup.GET("/areacodes/territories/:abbr", app.TerritoryAPI)
+	apiGroup.GET("/areacodes/regions", app.TerritoriesAPI)
+	apiGroup.GET("/areacodes/regions/:abbr", app.TerritoryAPI)
 	apiGroup.GET("/websites", app.WebsitesAPI)
 	apiGroup.GET("/demozoo", app.DemozooAPI)
 	apiGroup.GET("/groups", func(c echo.Context) error { return app.GroupsAPI(c, db, sl) })
@@ -244,9 +244,9 @@ func (c *Configuration) api(e *echo.Echo, db *sql.DB, sl *slog.Logger, public em
 	apiGroup.GET("/boards", func(c echo.Context) error { return app.BoardsAPI(c, db, sl) })
 	apiGroup.GET("/magazines", func(c echo.Context) error { return app.MagazinesAPI(c, db, sl) })
 	apiGroup.GET("/releaser/:name", func(c echo.Context) error { return app.ReleaserAPI(c, db, sl) })
-	apiGroup.GET("/files", func(c echo.Context) error { return app.ArtifactsAPI(c, db, sl) })
-	apiGroup.GET("/files/new", func(c echo.Context) error { return app.ArtifactsNewAPI(c, db, sl) })
-	apiGroup.GET("/file/:hash", func(c echo.Context) error { return app.FileAPI(c, db, sl) })
+	apiGroup.GET("/artifacts", func(c echo.Context) error { return app.ArtifactsAPI(c, db, sl) })
+	apiGroup.GET("/artifacts/new", func(c echo.Context) error { return app.ArtifactsNewAPI(c, db, sl) })
+	apiGroup.GET("/artifact/:id", func(c echo.Context) error { return app.FileAPI(c, db, sl) })
 	apiGroup.GET("/sceners", func(c echo.Context) error { return app.ScenersAPI(c, db, sl) })
 	apiGroup.GET("/sceners/artist", func(c echo.Context) error { return app.ArtistsAPI(c, db, sl) })
 	apiGroup.GET("/sceners/coder", func(c echo.Context) error { return app.CodersAPI(c, db, sl) })
